force-app/main/default/objects/Throughput__c/Throughput__c.object-meta.xml
<CustomObject>
    <label>Throughput</label>
    <nameField>
        <displayFormat>Thpt-{0000}</displayFormat>
        <label>ThroughPut Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Throughput</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>