force-app/main/default/objects/Throughput__c/fields/Apply_Throughput__c.field-meta.xml
<CustomField>
    <fullName>Apply_Throughput__c</fullName>
    <label>Apply Throughput</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>