force-app/main/default/objects/Throughput__c/fields/PlantGrade__c.field-meta.xml
<CustomField>
    <fullName>PlantGrade__c</fullName>
    <formula>IF(OR(ISPICKVAL(MOT__c,&apos;Barge&apos;),ISPICKVAL(MOT__c,&apos;Rail&apos;) ), Plant_Code__c +TEXT(Product_Sub_Grade__c)+TEXT(MOT__c), Plant_Code__c +TEXT( Standard_grade__c )+TEXT(MOT__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlantGradeMot</label>
    <type>Text</type>
</CustomField>