force-app/main/default/objects/Throughput__c/fields/Product_Sub_Grade__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Grade__c</fullName>
    <label>Product Sub Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RV_Product_Catalogues</valueSetName>
    </valueSet>
</CustomField>