force-app/main/default/objects/Throughput__c/fields/Standard_grade__c.field-meta.xml
<CustomField>
    <fullName>Standard_grade__c</fullName>
    <label>Standard grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>