force-app/main/default/objects/Throughput__c/fields/Throughput_Cost__c.field-meta.xml
<CustomField>
    <fullName>Throughput_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Throughput Cost(EUR/100L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>