force-app/main/default/objects/Throughput__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>MOT__c</columns>
    <columns>Standard_grade__c</columns>
    <columns>Product_Sub_Grade__c</columns>
    <columns>Throughput_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>Throughput</label>
</ListView>