force-app/main/default/objects/Throughput__c/listViews/Copy_of_All_SOM.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_SOM</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Throughput_Cost__c</columns>
    <columns>MOT__c</columns>
    <columns>Standard_grade__c</columns>
    <columns>Product_Sub_Grade__c</columns>
    <columns>Apply_Throughput__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plant__c</field>
        <operation>contains</operation>
        <value>Magdeburg</value>
    </filters>
    <label>Copy of All(SOM)</label>
</ListView>